<dy-terms>: Ensure terms wrapper is cleared before populating terms

--- a/src/assets/components/dy-projects.html
+++ b/src/assets/components/dy-projects.html
@@ -245,6 +245,8 @@ class DYTerms extends DYElement {
 	initialize(termIDs = [], excludeTerms = ['uncategorized'], excludeTaxonomies = ['page-category', 'category']){
 		const root = this.root
 		const $termsWrapper = this.$termsWrapper
+
+		$termsWrapper.empty()
 		
 		DY.getData.then(() => {
 			const terms = Object.values(DY.data.terms)
