<dy-projects>: When filter is activated, use JavaScript to animate the difference in position (like Isotope)

--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -49,16 +49,14 @@
 			transform: scale(0.75);
 		}
 		:host(.hide) {
-			/*flex: 0;
-			height: 0;
-			margin: 0;
-			padding: 0;*/
-			/*flex: 0.5 5rem;*/
-			transform: rotateX(var(--tilt)) translateY(50%) rotateX(var(--tilt-neg));
-			transition: var(--transition-slow);
-
+			/*transform: rotateX(var(--tilt)) translateY(25%) rotateX(var(--tilt-neg));
 			cursor: initial;
 			pointer-events: none;
+			*/
+
+			flex: 0;
+			margin: 0;
+			padding: 0;
 		}
 
 
