--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -16,7 +16,7 @@
 
 	height: var(--main-menu-height);
 
-	transition: height var(--transition-slow);
+	/*transition: height var(--transition-slow);*/
 	will-change: height;
 
 	position: relative;
@@ -26,6 +26,7 @@
 }
 #header.full {
 	height: calc(100vh - var(--secondary-menu-height));
+	--main-menu-height: 100vh;
 	/*box-shadow: rgba(0, 0, 0, 0.5) 0 0 0 100vmax, rgba(0, 0, 0, 0.5) 0 0 0 100vmax inset;*/
 }
 #header.sticky {
@@ -73,6 +74,7 @@
 			transparent 0.5rem,
 			transparent 1rem
 		);
+	font-size: calc(1rem + 2.5vmin);
 	padding: var(--padding);
 
 	flex-direction: column;
@@ -109,9 +111,12 @@
 }
 #header.full:not(.sticky) #logo {
 	margin-right: 0;
-	margin-bottom: 1rem;
-	max-width: 100%;
-	width: 100%;
+	margin-bottom: 0.5em;
+	width: 90%;
+	height: 40vh;
+
+    flex-direction: column;
+    align-items: center;
 }
 #header.full #logo {
 	max-height: 7rem;
@@ -119,6 +124,7 @@
 #logo svg {
 	margin: auto;
 	width: auto;
+	max-width: 100%;
 	height: 52.5%;
 	transform: perspective(500px) translate(0); /* adding translate(0) ensures height is updated after transitioning from sticky #header to non sticky #header */
 	transform-origin: left;
@@ -127,7 +133,19 @@
 /*#header.immersive #logo img {
 	filter: brightness(20);
 }*/
-#logo:hover svg {
+#header.full:not(.sticky) #logo {
+	filter: brightness(10) drop-shadow(#fff 0 0 1em);
+}
+#header.full:not(.sticky) #logo:after {
+    content: 'BE INSPIRED.';
+    font-family: var(--heading-font);
+    font-size: 0.5em;
+    letter-spacing: 0.4em;
+}
+/*#header.immersive #logo svg path {
+	fill: #fff;
+}*/
+#header:not(.full) #logo:hover svg {
 	transform: perspective(500px) rotateY(20deg);
 }
 
@@ -167,6 +185,22 @@ nav > ul > li {
 	content: "●";
 	transform: scale(0.5);
 }
+#header.full:not(.sticky) #main-menu > ul > li {
+	margin: 0 1.5vw;
+}
+#header.full:not(.sticky) #main-menu > ul > li:nth-child(-n + 3) {
+	order: 1;
+}
+@media (min-width: 20rem) and (min-height: 26rem) {
+	#header.full:not(.sticky) #main-menu > ul:after {
+		content: '';
+		flex: 100%;
+		order: 2;
+	}
+}
+#main-menu > ul > li:nth-child(n + 4) {
+	order: 3;
+}
 
 nav ul > li > a {
 	color: inherit;
@@ -195,7 +229,7 @@ nav ul > li > a {
 }
 #header.full:not(.sticky) #main-menu > ul > li > a {
 	color: rgba(255, 255, 255, 0.95);
-	font-size: 2.5rem;
+	/*font-size: 2.5rem;*/
 	line-height: 3;
 }
 #secondary-menu > ul > li > a {
