--- a/src/assets/components/dy-projects.html
+++ b/src/assets/components/dy-projects.html
@@ -98,3 +98,131 @@
 	<dy-project-filters></dy-project-filters>
 	<div class="projects"></div>
 </template>
+
+
+
+<script>
+class DYProjects extends DYElement {
+	set filter(filter){
+		let animate
+		this.$projects.animatePositionChange(new Promise(resolve => animate = resolve))
+
+		for(const $project of this.$projects){
+			$project.toggleClass(!$project.matches(filter || '*'), 'hide')
+		}
+		animate()
+	}
+
+	constructor(){
+		super()
+
+		const root = this.root
+		
+		const $projectsWrapper = this.$projectsWrapper
+
+		Promise.all([
+			windowLoad,
+			DY.getData,
+			customElements.whenDefined('dy-project')
+		]).then(() => {
+			const pageCategory_project_id = DY.data.termsBySlug['page-category.project'].term_id
+			const projects = Object.values(DY.data.posts)
+				.filter(post => post['page-category'] && post['page-category'].includes(pageCategory_project_id))
+
+			for(const project of projects){
+				const $project = $$$('dy-project')
+				$project.prependTo($projectsWrapper)
+				$project.data = project
+			}
+
+			/*imagesLoaded($projects, () => {
+				this.isotope = new Isotope( $projects, {
+					//itemSelector: '.projects > *',//'dy-project',
+					getSortData: {
+						date: '[data-date]',
+						modifiedDate: '[data-modified-date]'
+					},
+					sortBy: 'modifiedDate',
+					sortAscending: false,
+					hiddenStyle: {
+						opacity: 0,
+						transform: "perspective(1000px) scale(0.75) rotateY(180deg)"
+					},
+					visibleStyle: {
+						opacity: 1,
+						transform: "none"
+					},
+					layoutMode: 'masonryHorizontal',
+					stagger: 20
+				})
+
+				DYProjectFilters.update()
+			})*/
+		})
+
+		$projectsWrapper.on({
+			click: e => {
+				if(e.target === $projectsWrapper)
+					this.setFocusedProject()
+			},
+			scroll: this.scrollInView.throttle().bind(this)
+		})
+	}
+
+	setFocusedProject($project){
+		const root = this.root
+
+		const makeProjectFocused = $project !== undefined && !$project.hasClass('focused')
+
+		this.toggleClass(makeProjectFocused, 'has-focused-project')
+		//;(() => this.toggleClass(makeProjectFocused, 'has-focused-project')).delay(100)
+
+		root.find('dy-project.focused').removeClass('focused')
+
+		if($project) $project.toggleClass(makeProjectFocused, 'focused')
+
+
+		let t = 0
+		document.body.find('#background canvas')[0]
+			.draw(function(){
+				this.globalAlpha = 0.1
+				this.blur(30)
+			})
+			.animate(function(){
+				if(makeProjectFocused && $project.data.featuredImage){
+					this.loadImage($project.data.featuredImage.source_url).then(img => {
+						this.drawImage(img, 0, 0, this.width, this.width / img.ratio)
+					})
+				}else{
+					//this.clear()
+				}
+				if(t++ > 20){
+					return false
+				}
+			}, 10)
+
+		this.scrollInView()
+	}
+
+	get $projectsWrapper(){
+		return this.root.find('.projects')[0]
+	}
+
+	get $projects(){
+		return this.root.find('dy-project')
+	}
+
+	scrollInView(){
+		const computedStyle = this.computedStyle
+		if(parseFloat(computedStyle['height']) > parseFloat(computedStyle['min-height']))
+			document.body.animateScrollY($('dy-header').stickyScrollY)
+	}
+
+	/*// Using regular DOM instead of Shadow DOM for because of incompatibility between ShadyDOM and Isotope.
+	get root(){
+		this.init()
+		return this
+	}*/
+}
+customElements.define('dy-projects', DYProjects)
+</script>
