HTML Imports: Add explicit dependencies

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -1,3 +1,5 @@
+<link rel="import" href="dy-icon.html">
+
 <template id="dy-header">
 	<style>
 	@import 'http://localhost:8888/darrylyeo/wp-content/themes/DY/assets/header.css';
