--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -1,3 +1,6 @@
+<link rel="import" href="dy-terms.html">
+<link rel="import" href="dy-date.html">
+
 <template id="dy-project">
 	<style>
 		:host {
