--- a/src/assets/components/dy-projects.html
+++ b/src/assets/components/dy-projects.html
@@ -1,3 +1,6 @@
+<link rel="import" href="dy-project.html">
+<link rel="import" href="dy-project-filters.html">
+
 <template id="dy-projects">
 	<style>
 		dy-projects, :host {
