Deactivate fitText for now

--- a/src/assets/components/dy-project-header.html
+++ b/src/assets/components/dy-project-header.html
@@ -156,7 +156,7 @@ class DYProjectHeader extends DYElement {
 				'.link[href]': data.link,
 				'.excerpt': data.excerpt.rendered
 			})
-			root.find('#title').fitText('7.5em')
+			//root.find('#title').fitText('7.5em')
 
 			if(data.featuredImage){
 				const imageData = data.featuredImage
