--- a/src/assets/components/dy-projects.html
+++ b/src/assets/components/dy-projects.html
@@ -120,11 +120,7 @@ class DYProjects extends DYElement {
 		
 		const $projectsWrapper = this.$projectsWrapper
 
-		Promise.all([
-			windowLoad,
-			DY.getData,
-			customElements.whenDefined('dy-project')
-		]).then(() => {
+		DY.getData.then(() => {
 			const pageCategory_project_id = DY.data.termsBySlug['page-category.project'].term_id
 			const projects = Object.values(DY.data.posts)
 				.filter(post => post['page-category'] && post['page-category'].includes(pageCategory_project_id))
