Replace setFocusedProject() method with $focusedProject setter; keep track of currently focused project; rewrite internal logic to rely on term IDs and project objects instead of DOM state

--- a/src/assets/components/dy-project-filters.html
+++ b/src/assets/components/dy-project-filters.html
@@ -54,6 +54,8 @@ class DYProjectFilters extends DYTerms {
 				'disabled'
 			)
 		}
+
+		this.dispatchEvent(new CustomEvent('dy-filter-change'))
 	}
 
 	static update(){
