--- a/src/assets/components/dy-terms.html
+++ b/src/assets/components/dy-terms.html
@@ -46,9 +46,11 @@
 class DYTerms extends DYElement {
 	initialize(termIDs = [], excludeTerms = ['uncategorized'], excludeTaxonomies = ['page-category', 'category']){
 		const root = this.root
-		const $termsWrapper = this.$termsWrapper
 
+		const $termsWrapper = this.$termsWrapper
 		$termsWrapper.empty()
+
+		const $termToTerm = this.$termToTerm = new WeakMap()
 		
 		DY.getData.then(() => {
 			const terms = Object.values(DY.data.terms)
@@ -86,6 +88,8 @@ class DYTerms extends DYElement {
 						.attr('data-selector', `.${term.taxonomy}-${term.slug}`)
 						.html(term.name)
 						.appendTo($taxonomy)
+
+					$termToTerm.set($term, term)
 				}
 			}
 		})
